--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Juicy Colors</title>
 </head>
 <body>
-    Test
+    <h1 class="centered">Juicy Colors</h1>
+
+    <div class="libary">
+        <div class="ff1100">#FF1100</div>
+        <div class="11ff00">#11FF00</div>
+    </div>
 </body>
 </html>
