--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Juicy Colors</title>
 </head>
 <body>
-    <h1 class="centered">Juicy Colors</h1>
+    <h1 class="title">Juicy Colors</h1>
 
     <div class="libary">
         <div class="ff1100">#FF1100</div>
