Upate HMTL and CSS

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
     <h1 class="title">Juicy Colors</h1>
 
-    <div class="libary">
-        <div class="ff1100">#FF1100</div>
-        <div class="11ff00">#11FF00</div>
+    <div class="library">
+        <div class="color-card">
+            <div class="color-info">
+                <span class="color-name">Name</span>
+                <span class="color-hex">#HEX</span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
