Update Color Card HTML

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="library">
         <div class="color-card">
             <div class="color-info">
-                <span class="color-name">Name</span>
+                <span class="color-name">Name</span><br>
                 <span class="color-hex">#HEX</span>
             </div>
         </div>
