Update Card Style

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <h1 class="title">Juicy Colors</h1>
 
     <div class="library">
+
         <div class="color-card">
-            <div class="color-info">
-                <span class="color-name">Name</span><br>
+            <div class="color-swatch"></div>
+            <div class="color-meta">
+                <span class="color-name">Name</span>
                 <span class="color-hex">#HEX</span>
             </div>
         </div>
+
     </div>
 </body>
 </html>
