--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="color-card">
             <div class="color-meta">
-                <span class="color-name">Name</span>
+                <span class="color-name">Name</span><br>
                 <span class="color-hex">#HEX</span>
             </div>
             <div class="color-swatch"></div>
